# tiny_ising_cp2025

./: CMakeLists.txt  CMakePresets.json  L.csv  TODO  Untitled.ipynb  compiler_test.csv  compiler_test.ipynb  compiler_test_full.csv  jupiterace_L  jupiterace_time  montecarlo_step_test.csv  montecarlo_step_test.ipynb  optimizations.ipynb  problem_size_test.ipynb  problem_size_test_atom.csv  problem_size_test_atom_metric.csv  problem_size_test_big.csv  problem_size_test_both_atom.csv  problem_size_test_both_powerof2.csv  problem_size_test_default_powerof2.csv  problem_size_test_xoro_powerof2.csv  problem_size_test_xoshiro.csv  profiler.ipynb  sanity.ipynb  test.ipynb  test2.ipynb
perf_results/gcc-O3_1000/: flamegraph.html  stat_out  table  time
results/: table  time
results/both_1000/: table  time
results/clang/: myfile  time
results/clang-O2_300/: table  time
results/clang-O2_384/: time
results/clang-O3-march-native_300/: time
results/clang-O3-march-native_384/: time
results/clang-O3_300/: table  time
results/clang-O3_384/: table  time
results/gcc-O2_300/: table  time
results/gcc-O2_384/: time
results/gcc-O3-march-native_300/: time
results/gcc-O3-march-native_384/: time
results/gcc-O3_100/: table  time
results/gcc-O3_1000/: table  time
results/gcc-O3_128/: table  time
results/gcc-O3_16/: table  time
simtool/: simtool.py
src/: ising.c  ising.h  ising_intrinsics.c  ising_intrinsics.h  ising_rb.c  ising_rb.h  tiny_ising.c  xoshiropp.h
test_results/: problem_size_test_lab2_atom.csv  problem_size_test_lab2_jupiterace.csv
(+54 files in other folders)
